got sort working better, going through backend on hold

--- a/src/App.css
+++ b/src/App.css
@@ -31,11 +31,12 @@ body {
     padding-bottom: 60px;
 }
 
-ul {
+ol {
     display: table;
     margin: 0 auto;
     text-align: left;
     padding-top: 10px;
+    min-width: fit-content;
 }
 
 .buttonPadding {
