--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@ ol {
 .form-container {
     background-color: white;
     border-style: solid;
+    border-color: #33d8d5 ;
     margin-top: 5%;
     margin-left: 20%;
     margin-right: 20%;
